[package]
name = "rust-traceroute"
version = "0.1.0"
authors = ["Matthew McPherrin <git@mcpherrin.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.15"
libc = "0.2"

[patch.crates-io]
nix = { path = "../nix" }
